--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
-  <link href="assets/fontawesome-free-5.10.1/css/all.css" rel="stylesheet">
+  <!--link href="assets/fontawesome-free-5.10.1/css/all.css" rel="stylesheet">
   <link href="assets/fontawesome-free-5.10.1/css/brands.css" rel="stylesheet">
   <link href="assets/fontawesome-free-5.10.1/css/fontawesome.css" rel="stylesheet">
   <link href="assets/fontawesome-free-5.10.1/css/regular.css" rel="stylesheet">
@@ -25,7 +25,7 @@
   <script src="assets/fontawesome-free-5.10.1/js/fontawesome.js" type="text/javascript"></script>
   <script src="assets/fontawesome-free-5.10.1/js/regular.js" type="text/javascript"></script>
   <script src="assets/fontawesome-free-5.10.1/js/solid.js" type="text/javascript"></script>
-  <script src="assets/fontawesome-free-5.10.1/js/v4-shims.js" type="text/javascript"></script>
+  <script src="assets/fontawesome-free-5.10.1/js/v4-shims.js" type="text/javascript"></script-->
 
 </head>
 <body>
