--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
 </head>
 <body>
-  <app-root (scroll)="onElementScroll($event)"></app-root>
+  <app-root></app-root>
 </body>
 </html>
